--- a/src/views/Homepage/Homepage.css
+++ b/src/views/Homepage/Homepage.css
@@ -40,16 +40,26 @@
     }
 }
 
-/* @media (max-width: 640px) {
-    .HeroGroup {
-        padding: 300px 50px;
-    }
+
+/* Header divider */
+.custom-shape-divider-bottom-1612169418 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
 }
-*/
+.custom-shape-divider-bottom-1612169418 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 157px;
+}
+.custom-shape-divider-bottom-1612169418 .shape-fill {
+    fill: #FFFFFF;
+}
 
-
-/* .Hero .BtnGlow {
-    background: linear-gradient(#df1227 0%, #fb6d1b 100%);
-    width: 100px;
-    height: 100px;
-} */
+.Projects h2 {
+    text-align: center;
+}
