--- a/src/components/ArticleCard/ArticleCard.css
+++ b/src/components/ArticleCard/ArticleCard.css
@@ -16,14 +16,13 @@
     display: grid;
     grid-template-columns: 440px 500px;
     grid-template-rows: auto auto auto auto;
+    column-gap: 20px;
     /* rows: tags, title, desc, button */
     grid-template-areas: 
         "img tags"
         "img title"
         "img desc"
         "img btn";
-    column-gap: 0;
-    row-gap: 0;
     justify-items: center;
     align-items: center;
     /* justify-content: center; */
@@ -34,18 +33,37 @@
     grid-area: img;
 }
 
+.ArticleCard .img .cover {
+    background: red;
+    width: 400px;
+    height: 260px;
+    border-radius: 20px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden
+}
+
+.ArticleCard .img .cover img {
+    flex-shrink: 0;
+    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+}
+
 .ArticleCard .tags {
     grid-area: tags;
     text-align: left;
     display: flex;
-    height: 35px;
+    height: 45px;
 }
 
 .ArticleCard .tag {
     display: inline-block;
     align-self: flex-end;
     background: #bcbcbc;
-    margin: 0 8px;
+    margin-right: 12px;
     padding: 2px 10px;
     font-size: 15px;
     font-weight: 600;
@@ -57,6 +75,7 @@
     grid-area: title;
     font-weight: 600;
     font-size: 28px;
+    color: rgba(38, 43, 54, 0.82);
     text-align: left;
     line-height: 38px;
     margin: 10px 0;
@@ -68,18 +87,22 @@
     font-weight: 300;
     font-size: 18px;
     text-align: left;
-    height: 60px;
+    height: 80px;
 }
 
-.ArticleCard .btn {
-    display: inline-block;
+.ArticleCard .btn{
     grid-area: btn;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.ArticleCard .btn a{
+    display: inline-block;
     background: #9d9d9d;
-    margin: 0 8px;
-    padding: 10px 15px;
+    margin-right: 12px;
+    padding: 10px 17px;
     font-size: 18px;
     font-weight: 600;
     color: white;
-    border-radius: 12px;
-
+    border-radius: 10px;
 }
