--- a/src/components/GlowyBtn/GlowyBtn.css
+++ b/src/components/GlowyBtn/GlowyBtn.css
@@ -7,3 +7,11 @@
     border: 0 solid transparent;
     color: white;
 }
+
+@media (max-width: 640px){
+    .GlowyBtn a {
+        font-size: 15px;        
+        padding: 5px 20px;
+        border-radius: 7px;
+    }
+}
