--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -56,3 +56,11 @@
 .Header .links a:hover:after {
     width: 100%;
 }
+
+/* For mobile header */
+.Header .menu-button{
+    float: right;
+    width: 40px;
+    height: 40px;
+    background-color: black;
+}
