--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -50,3 +50,17 @@
     line-height: 30px;
     color: #656565;
 }
+
+@media (max-width: 640px) {
+    .Card {
+        width: 300px;
+        height: 200px;
+    }
+    .Card h1 {
+        font-size: 24px;
+    }
+    .Card p {
+        font-size: 15px;
+        line-height: 22px;
+    }
+}
