--- a/src/layouts/Base/Base.css
+++ b/src/layouts/Base/Base.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;500;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 
 body {
     font-family: 'Montserrat', sans-serif;
@@ -21,4 +22,13 @@ html {
 a {
     text-decoration: none;
     color: #c9c9c9;
+}
+
+/* Custom text selection */
+::selection {
+    background: rgb(221, 70, 0);
+    color: white;
+} 
+::-moz-selection { /* Code for Firefox */
+    background: rgb(221, 70, 0);
 }
